h1(eveTopic). What's New in EVE Editor

h2(eveTopic). Version 1.34.4 (2021-01-22)

* [Bug Fix-#5761] Fixed a bug where an ArrayOutOfBoundsException occurred when choosing "none" for a detector channel of a plot window when no channel was previously set
* [Bug Fix-#5752] Fixed a bug where a null pointer exception occurred in the Scan View if the last scan was closed and another opened afterwards 
* [Bug Fix-#5743] Set the precision of the values in the preview table for positions in a position file to 7 (@12.4g@ -> @12.7g@)
* [Bug Fix-#5739] Fixed bugs related to main axis adjustments when adjust parameters of axis weren't set to stepcount
* [Bug Fix-#5687] Fixed a bug where the position mode combo did not refresh its value in the Motor Axis View when the property was altered within the SM Axes / Channels View
* [Bug Fix-#5687] Fixed a bug where the normalization channel combo did not refresh its value in the Detector Channel View when the property was altered within the SM Axes / Channels View
* [Bug Fix-#5684] Fixed a bug where a non-ASCII SCML filename caused an error during File Loading (in the XML parser)
* [Bug Fix-#5590] Fixed a bug where line breaks could be inserted into a position list
* [Bug Fix-#5433] Increased delay of range input in Motor Axis View, tooltip of ranges and position lists in SM Axes / Channels View now show only #positions if position count is greater than 50.

h2(eveTopic). Version 1.34.2 (2020-09-03)

* [Bug Fix-#5596] Fixed a bug where changing the stepfunction in the Motor Axis View caused the cursor to jump to the first position after each (valid) input.

h2(eveTopic). Version 1.34.1 (2020-08-17)

* [Bug Fix-#5556] Fixed a bug where the stepfunction could not be changed for discrete motor axes in the Axes Channels View.
* [Bug Fix-#5544] Fixed a bug where the motor axis and detector channel views did not refresh after changing motor axis stepfunction or detector channel acquisition type.