@@ -16,7 +16,6 @@ import org.apache.log4j.Logger;
 import de.ptb.epics.eve.data.DataTypes;
 import de.ptb.epics.eve.data.measuringstation.MotorAxis;
 import de.ptb.epics.eve.data.scandescription.axismode.AddMultiplyMode;
-import de.ptb.epics.eve.data.scandescription.axismode.AdjustParameter;
 import de.ptb.epics.eve.data.scandescription.axismode.AxisMode;
 import de.ptb.epics.eve.data.scandescription.axismode.FileMode;
 import de.ptb.epics.eve.data.scandescription.axismode.PluginMode;
@@ -38,14 +37,7 @@ public class Axis extends AbstractMainPhaseBehavior implements
 		PropertyChangeListener {
 	public static final String STEPFUNCTION_PROP = "stepfunction";
 	public static final String POSITON_MODE_PROP = "positionMode";
-	
-	private static final String ILLEGAL_STATE_START_MESSAGE = 
-			"start cannot be set (set as AdjustParameter)";
-	private static final String ILLEGAL_STATE_STOP_MESSAGE = 
-			"stop cannot be set (set as AdjustParameter)";
-	private static final String ILLEGAL_STATE_STEPWIDTH_MESSAGE = 
-			"stepwidth cannot be set (set as AdjustParameter)";
-	
+
 	private static Logger logger = Logger.getLogger(Axis.class.getName());
 
 	private PropertyChangeSupport propertyChangeSupport;
@@ -387,10 +379,6 @@ public class Axis extends AbstractMainPhaseBehavior implements
 	 */
 	@SuppressWarnings("unchecked")
 	public void setStart(int start) {
-		if (((AddMultiplyMode<?>)this.getMode()).getAdjustParameter().equals(
-				AdjustParameter.START)) {
-			throw new IllegalStateException(ILLEGAL_STATE_START_MESSAGE);
-		}
 		if (!this.getType().equals(DataTypes.INT)) {
 			return;
 		}
@@ -407,10 +395,6 @@ public class Axis extends AbstractMainPhaseBehavior implements
 	 */
 	@SuppressWarnings("unchecked")
 	public void setStart(double start) {
-		if (((AddMultiplyMode<?>)this.getMode()).getAdjustParameter().equals(
-				AdjustParameter.START)) {
-			throw new IllegalStateException(ILLEGAL_STATE_START_MESSAGE);
-		}
 		if (!this.getType().equals(DataTypes.DOUBLE)) {
 			return;
 		}
@@ -427,10 +411,6 @@ public class Axis extends AbstractMainPhaseBehavior implements
 	 */
 	@SuppressWarnings("unchecked")
 	public void setStart(Date start) {
-		if (((AddMultiplyMode<?>)this.getMode()).getAdjustParameter().equals(
-				AdjustParameter.START)) {
-			throw new IllegalStateException(ILLEGAL_STATE_START_MESSAGE);
-		}
 		if (!this.getType().equals(DataTypes.DATETIME)) {
 			return;
 		}
@@ -447,10 +427,6 @@ public class Axis extends AbstractMainPhaseBehavior implements
 	 */
 	@SuppressWarnings("unchecked")
 	public void setStart(Duration start) {
-		if (((AddMultiplyMode<?>)this.getMode()).getAdjustParameter().equals(
-				AdjustParameter.START)) {
-			throw new IllegalStateException(ILLEGAL_STATE_START_MESSAGE);
-		}
 		if (!this.getType().equals(DataTypes.DATETIME)) {
 			return;
 		}
@@ -478,10 +454,6 @@ public class Axis extends AbstractMainPhaseBehavior implements
 	 */
 	@SuppressWarnings("unchecked")
 	public void setStop(int stop) {
-		if (((AddMultiplyMode<?>)this.getMode()).getAdjustParameter().equals(
-				AdjustParameter.STOP)) {
-			throw new IllegalStateException(ILLEGAL_STATE_STOP_MESSAGE);
-		}
 		if (!this.getType().equals(DataTypes.INT)) {
 			return;
 		}
@@ -497,10 +469,6 @@ public class Axis extends AbstractMainPhaseBehavior implements
 	 */
 	@SuppressWarnings("unchecked")
 	public void setStop(double stop) {
-		if (((AddMultiplyMode<?>)this.getMode()).getAdjustParameter().equals(
-				AdjustParameter.STOP)) {
-			throw new IllegalStateException(ILLEGAL_STATE_STOP_MESSAGE);
-		}
 		if (!this.getType().equals(DataTypes.DOUBLE)) {
 			return;
 		}
@@ -516,10 +484,6 @@ public class Axis extends AbstractMainPhaseBehavior implements
 	 */
 	@SuppressWarnings("unchecked")
 	public void setStop(Date stop) {
-		if (((AddMultiplyMode<?>)this.getMode()).getAdjustParameter().equals(
-				AdjustParameter.STOP)) {
-			throw new IllegalStateException(ILLEGAL_STATE_STOP_MESSAGE);
-		}
 		if (!this.getType().equals(DataTypes.DATETIME)) {
 			return;
 		}
@@ -535,10 +499,6 @@ public class Axis extends AbstractMainPhaseBehavior implements
 	 */
 	@SuppressWarnings("unchecked")
 	public void setStop(Duration stop) {
-		if (((AddMultiplyMode<?>)this.getMode()).getAdjustParameter().equals(
-				AdjustParameter.STOP)) {
-			throw new IllegalStateException(ILLEGAL_STATE_STOP_MESSAGE);
-		}
 		if (!this.getType().equals(DataTypes.DATETIME)) {
 			return;
 		}
@@ -566,10 +526,6 @@ public class Axis extends AbstractMainPhaseBehavior implements
 	 */
 	@SuppressWarnings("unchecked")
 	public void setStepwidth(int stepwidth) {
-		if (((AddMultiplyMode<?>)this.getMode()).getAdjustParameter().equals(
-				AdjustParameter.STEPWIDTH)) {
-			throw new IllegalStateException(ILLEGAL_STATE_STEPWIDTH_MESSAGE);
-		}
 		if (!this.getType().equals(DataTypes.INT)) {
 			return;
 		}
@@ -585,10 +541,6 @@ public class Axis extends AbstractMainPhaseBehavior implements
 	 */
 	@SuppressWarnings("unchecked")
 	public void setStepwidth(double stepwidth) {
-		if (((AddMultiplyMode<?>)this.getMode()).getAdjustParameter().equals(
-				AdjustParameter.STEPWIDTH)) {
-			throw new IllegalStateException(ILLEGAL_STATE_STEPWIDTH_MESSAGE);
-		}
 		if (!this.getType().equals(DataTypes.DOUBLE)) {
 			return;
 		}
@@ -604,10 +556,6 @@ public class Axis extends AbstractMainPhaseBehavior implements
 	 */
 	@SuppressWarnings("unchecked")
 	public void setStepwidth(Date stepwidth) {
-		if (((AddMultiplyMode<?>)this.getMode()).getAdjustParameter().equals(
-				AdjustParameter.STEPWIDTH)) {
-			throw new IllegalStateException(ILLEGAL_STATE_STEPWIDTH_MESSAGE);
-		}
 		if (!this.getType().equals(DataTypes.DATETIME)) {
 			return;
 		}
@@ -623,10 +571,6 @@ public class Axis extends AbstractMainPhaseBehavior implements
 	 */
 	@SuppressWarnings("unchecked")
 	public void setStepwidth(Duration stepwidth) {
-		if (((AddMultiplyMode<?>)this.getMode()).getAdjustParameter().equals(
-				AdjustParameter.STEPWIDTH)) {
-			throw new IllegalStateException(ILLEGAL_STATE_STEPWIDTH_MESSAGE);
-		}
 		if (!this.getType().equals(DataTypes.DATETIME)) {
 			return;
 		}
@@ -653,15 +597,11 @@ public class Axis extends AbstractMainPhaseBehavior implements
 	 * @param stepcount
 	 */
 	public void setStepcount(double stepcount) {
-		if (((AddMultiplyMode<?>)this.getMode()).getAdjustParameter().equals(
-				AdjustParameter.STEPCOUNT)) {
-			throw new IllegalStateException(
-					"stepcount cannot be set (set as AdjustParameter)");
-		}
 		if ((this.getScanModule().getMainAxis() != null) 
 				&& this.getScanModule().getMainAxis() != this) {
-			throw new IllegalStateException(
-					"Stepcount is given by main axis of scanmodule.");
+			/*throw new IllegalStateException(
+					"Stepcount is given by main axis of scanmodule.");*/
+			logger.warn("set stepcount although main axis was set!");
 		}
 		if (this.getStepfunction().equals(Stepfunctions.ADD) ||
 				this.getStepfunction().equals(Stepfunctions.MULTIPLY)) {
