@@ -1,1 +1,1 @@
-<?xml version='1.0' encoding='utf-8' ?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>whatsnew</title><link type="text/css" rel="stylesheet" href="PLUGINS_ROOT/de.ptb.epics.eve.editor/help/css/editor.css"/></head><body><h1 id="WhatsNewinEVEEditor" class="eveTopic">What&#8217;s New in EVE Editor</h1><h2 id="Version1.34.420210122" class="eveTopic">Version 1.34.4 (2021-01-22)</h2><ul><li>[Bug Fix-#5761] Fixed a bug where an ArrayOutOfBoundsException occurred when choosing &#8220;none&#8221; for a detector channel of a plot window when no channel was previously set</li><li>[Bug Fix-#5752] Fixed a bug where a null pointer exception occurred in the Scan View if the last scan was closed and another opened afterwards </li><li>[Bug Fix-#5743] Set the precision of the values in the preview table for positions in a position file to 7 (<code>12.4g</code> -&gt; <code>12.7g</code>)</li><li>[Bug Fix-#5739] Fixed bugs related to main axis adjustments when adjust parameters of axis weren&#8217;t set to stepcount</li><li>[Bug Fix-#5687] Fixed a bug where the position mode combo did not refresh its value in the Motor Axis View when the property was altered within the SM Axes / Channels View</li><li>[Bug Fix-#5687] Fixed a bug where the normalization channel combo did not refresh its value in the Detector Channel View when the property was altered within the SM Axes / Channels View</li><li>[Bug Fix-#5684] Fixed a bug where a non-ASCII SCML filename caused an error during File Loading (in the XML parser)</li><li>[Bug Fix-#5590] Fixed a bug where line breaks could be inserted into a position list</li><li>[Bug Fix-#5433] Increased delay of range input in Motor Axis View, tooltip of ranges and position lists in SM Axes / Channels View now show only #positions if position count is greater than 50.</li></ul><h2 id="Version1.34.220200903" class="eveTopic">Version 1.34.2 (2020-09-03)</h2><ul><li>[Bug Fix-#5596] Fixed a bug where changing the stepfunction in the Motor Axis View caused the cursor to jump to the first position after each (valid) input.</li></ul><h2 id="Version1.34.120200817" class="eveTopic">Version 1.34.1 (2020-08-17)</h2><ul><li>[Bug Fix-#5556] Fixed a bug where the stepfunction could not be changed for discrete motor axes in the Axes Channels View.</li><li>[Bug Fix-#5544] Fixed a bug where the motor axis and detector channel views did not refresh after changing motor axis stepfunction or detector channel acquisition type.</li><li>[Bug Fix-#5443] Fixed a bug where the program crashed trying to show a range tooltip with &#8220;too much&#8221; values (now limited to 50).</li></ul><h2 id="Version1.34.020200731" class="eveTopic">Version 1.34.0 (2020-07-31)</h2><ul><li>[Feature #5094] Deletion of multiple selected motor axes / detector channels.</li><li>[Feature-#4921] Revised layout of the <a href="concepts/eveeditorperspective.html">Editor Perspective</a>. <i>Note</i> that if you upgraded from an older version a one time reset of the Editor Perspective is necessary.</li><li>[Feature-#4917] Introduced new View <a href="concepts/smaxeschannelsview.html">SM Axes / Channels View</a> replacing &#8220;Motor Axis&#8221; and &#8220;Detector Channels&#8221; &#8220;Action&#8221; tabs of the Scan Module View. Values are <a href="tasks/editaxisproperties.html">editable directly</a> in the table column.</li></ul><p style="text-align: center;"><img class="eveImage" border="0" src="../img/whatsnew/134/f4917-classiccomposite.png"/></p><ul><li>[Bug Fix-#5444] Fixed a bug where the statistics table of a position file motor axis did not refresh after changing the file in the newly introduced SM Axes / Channes View.</li><li>[Bug Fix-#5225] Fixed a bug where removing the trigger interval entry of a detector caused an error. </li></ul><p><hr/></p><p>For older versions, see the <a href="whatsnewarchive.html">What&#8217;s New Archive</a>.</p></body></html>
+<?xml version='1.0' encoding='utf-8' ?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>whatsnew</title><link type="text/css" rel="stylesheet" href="PLUGINS_ROOT/de.ptb.epics.eve.editor/help/css/editor.css"/></head><body><h1 id="WhatsNewinEVEEditor" class="eveTopic">What&#8217;s New in EVE Editor</h1><h2 id="Version1.34.420210122" class="eveTopic">Version 1.34.4 (2021-01-22)</h2><ul><li>[Bug Fix-#5845] Fixed a bug introduced due to Bug Fix #5739 which forbids setting values of axes set as adjust parameter</li><li>[Bug Fix-#5761] Fixed a bug where an ArrayOutOfBoundsException occurred when choosing &#8220;none&#8221; for a detector channel of a plot window when no channel was previously set</li><li>[Bug Fix-#5752] Fixed a bug where a null pointer exception occurred in the Scan View if the last scan was closed and another opened afterwards </li><li>[Bug Fix-#5743] Set the precision of the values in the preview table for positions in a position file to 7 (<code>12.4g</code> -&gt; <code>12.7g</code>)</li><li>[Bug Fix-#5739] Fixed bugs related to main axis adjustments when adjust parameters of axis weren&#8217;t set to stepcount</li><li>[Bug Fix-#5687] Fixed a bug where the position mode combo did not refresh its value in the Motor Axis View when the property was altered within the SM Axes / Channels View</li><li>[Bug Fix-#5687] Fixed a bug where the normalization channel combo did not refresh its value in the Detector Channel View when the property was altered within the SM Axes / Channels View</li><li>[Bug Fix-#5684] Fixed a bug where a non-ASCII SCML filename caused an error during File Loading (in the XML parser)</li><li>[Bug Fix-#5590] Fixed a bug where line breaks could be inserted into a position list</li><li>[Bug Fix-#5433] Increased delay of range input in Motor Axis View, tooltip of ranges and position lists in SM Axes / Channels View now show only #positions if position count is greater than 50.</li></ul><h2 id="Version1.34.220200903" class="eveTopic">Version 1.34.2 (2020-09-03)</h2><ul><li>[Bug Fix-#5596] Fixed a bug where changing the stepfunction in the Motor Axis View caused the cursor to jump to the first position after each (valid) input.</li></ul><h2 id="Version1.34.120200817" class="eveTopic">Version 1.34.1 (2020-08-17)</h2><ul><li>[Bug Fix-#5556] Fixed a bug where the stepfunction could not be changed for discrete motor axes in the Axes Channels View.</li><li>[Bug Fix-#5544] Fixed a bug where the motor axis and detector channel views did not refresh after changing motor axis stepfunction or detector channel acquisition type.</li><li>[Bug Fix-#5443] Fixed a bug where the program crashed trying to show a range tooltip with &#8220;too much&#8221; values (now limited to 50).</li></ul><h2 id="Version1.34.020200731" class="eveTopic">Version 1.34.0 (2020-07-31)</h2><ul><li>[Feature #5094] Deletion of multiple selected motor axes / detector channels.</li><li>[Feature-#4921] Revised layout of the <a href="concepts/eveeditorperspective.html">Editor Perspective</a>. <i>Note</i> that if you upgraded from an older version a one time reset of the Editor Perspective is necessary.</li><li>[Feature-#4917] Introduced new View <a href="concepts/smaxeschannelsview.html">SM Axes / Channels View</a> replacing &#8220;Motor Axis&#8221; and &#8220;Detector Channels&#8221; &#8220;Action&#8221; tabs of the Scan Module View. Values are <a href="tasks/editaxisproperties.html">editable directly</a> in the table column.</li></ul><p style="text-align: center;"><img class="eveImage" border="0" src="../img/whatsnew/134/f4917-classiccomposite.png"/></p><ul><li>[Bug Fix-#5444] Fixed a bug where the statistics table of a position file motor axis did not refresh after changing the file in the newly introduced SM Axes / Channes View.</li><li>[Bug Fix-#5225] Fixed a bug where removing the trigger interval entry of a detector caused an error. </li></ul><p><hr/></p><p>For older versions, see the <a href="whatsnewarchive.html">What&#8217;s New Archive</a>.</p></body></html>
