@@ -1,7 +1,5 @@
 package de.ptb.epics.eve.data.scandescription.tests;
 
-import java.util.Date;
-
 import org.junit.Before;
 import org.junit.Ignore;
 import org.junit.Test;
@@ -10,7 +8,6 @@ import de.ptb.epics.eve.data.scandescription.Axis;
 import de.ptb.epics.eve.data.scandescription.ScanModule;
 import de.ptb.epics.eve.data.scandescription.Stepfunctions;
 import de.ptb.epics.eve.data.scandescription.axismode.AddMultiplyModeDate;
-import de.ptb.epics.eve.data.scandescription.axismode.AdjustParameter;
 import de.ptb.epics.eve.data.tests.mothers.measuringstation.MotorAxisMother;
 
 /**
@@ -20,12 +17,6 @@ import de.ptb.epics.eve.data.tests.mothers.measuringstation.MotorAxisMother;
 public class AxisAddMultiplyDateTest {
 	private Axis axis;
 	private AddMultiplyModeDate axisMode;
-	
-	@Test(expected=IllegalStateException.class)
-	public void testSetStartAdjustStart() {
-		this.axisMode.setAdjustParameter(AdjustParameter.START);
-		this.axis.setStart(new Date(0));
-	}
 	
 	@Test
 	@Ignore
@@ -49,12 +40,6 @@ public class AxisAddMultiplyDateTest {
 	@Ignore
 	public void testSetStartAdjustStop() {
 		// TODO
-	}
-	
-	@Test(expected=IllegalStateException.class)
-	public void testSetStopAdjustStop() {
-		this.axisMode.setAdjustParameter(AdjustParameter.STOP);
-		this.axis.setStop(new Date(0));
 	}
 	
 	@Test
@@ -81,12 +66,6 @@ public class AxisAddMultiplyDateTest {
 		// TODO
 	}
 	
-	@Test(expected=IllegalStateException.class)
-	public void testSetStepwidthAdjustStepwidth() {
-		this.axisMode.setAdjustParameter(AdjustParameter.STEPWIDTH);
-		this.axis.setStepwidth(new Date(0));
-	}
-	
 	@Test
 	@Ignore
 	public void testSetStepcountAdjustStepwidth() {
@@ -109,12 +88,6 @@ public class AxisAddMultiplyDateTest {
 	@Ignore
 	public void testSetStepwidthAdjustStepcount() {
 		// TODO
-	}
-	
-	@Test(expected=IllegalStateException.class)
-	public void testSetStepcountAdjustStepcount() {
-		this.axisMode.setAdjustParameter(AdjustParameter.STEPCOUNT);
-		this.axis.setStepcount(0);
 	}
 	
 	@Before
